--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "UMD",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "isolatedModules": false,
     "noEmit": false,
