Create AMD build and update demo to use AMD loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "CommonJS",
+    "module": "AMD",
+    "outFile": "./dist/index.js",
     "moduleResolution": "node",
     "isolatedModules": false,
     "noEmit": false,
