Revert to CommonJS build and use local files in demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "AMD",
-    "outFile": "./dist/index.js",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "isolatedModules": false,
     "noEmit": false,
