--- a/demo/package.json
+++ b/demo/package.json
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
